--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>E-commerce</title>
 </head>
 <body style="background-color:blue;">
+    <h1>hiii i have been changed </h1>
+    <p>yaa ican see now i am vishal sharma the king of dholakpur and sulatanpuri and mangolpuri </p>
+    
     
 </body>
 </html>
